# haskell-gcd

./: .gitignore  .gitlab-ci.yml  GCD.cabal  Gcd.html  Makefile  README.md  benchmark.html  cabal.mk  doc-index.html  doc-index.json  gcd.cabal  gcd.haddock  gcd.txt  index.html  stack.mk  stack.yaml
.github/workflows/: haskell.yml
all/: doc-index-A.html  doc-index-All.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-H.html  doc-index-N.html  doc-index-R.html  doc-index-T.html  doc-index-W.html  index.html
app/: Main.hs
bench/: Bench.hs
files/: benchmark.html
gcd-0.12.2/: Gcd.html  doc-index.html  doc-index.json  gcd.haddock  gcd.txt  index.html
gcd-0.12.2/src/: Gcd.html
gcd/test/: hpc_index_alt.html  test.tix  test.tix.premunging
gcd/test/gcd-0.8.0-BCPu6Kzdeio6vlkIjPGOl3/: Gcd.hs.html
src/: GCD.hs  Gcd.hs  Gcd.html
test/: Spec.hs  Test.hs
