name:                GCD
version:             0.1.0
synopsis:            Greatest Common Denominator
description:         Test versions of Euclid's greatest common denominator algorithm 
homepage:            https://github.com/frankhjung/gcd#readme
license:             GPL-3
license-file:        LICENSE
author:              Frank H Jung
maintainer:          frankhjung@linux.com
copyright:           Copyright © 2017-2018 Frank H Jung
category:            education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type:              git
  location:          git@github.com:frankhjung/haskell-gcd.git

executable gcd
  hs-source-dirs:    app
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , GCD
  ghc-options:       -Wall
                     -threaded

library
  hs-source-dirs:    src
  exposed-modules:   GCD
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
  ghc-options:       -Wall

test-suite test
  hs-source-dirs:    test
  main-is:           Spec.hs
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  build-depends:     base >= 4.7 && < 5
                   , hspec >= 2.5
                   , GCD
  ghc-options:       -Wall
                     -threaded

benchmark benchmark
  hs-source-dirs:    bench
  main-is:           Bench.hs
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  build-depends:     base >= 4.7 && < 5
                   , criterion >= 1.3
                   , GCD
