name:               GCD
version:            0.4.0
synopsis:           Greatest Common Denominator
description:        Test versions of Euclid's greatest common denominator algorithm
homepage:           https://github.com/frankhjung/gcd#readme
license:            GPL-3
license-file:       LICENSE
author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2018-2019 Frank H Jung
category:           education
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

source-repository head
  type:             git
  location:         git@github.com:frankhjung/haskell-gcd.git

executable gcd
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall
                    -threaded
  other-modules:    Paths_GCD
  build-depends:    base >= 4.12
                  , GCD

library
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  GCD
  ghc-options:      -Wall
  build-depends:    base >= 4.12

test-suite test
  hs-source-dirs:   test
  main-is:          Test.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base >= 4.12
                  , besout >= 0.2
                  , hspec >= 2.6.1 && <= 2.7.1
                  , GCD
  ghc-options:      -Wall
                    -threaded

benchmark benchmark
  hs-source-dirs:   bench
  main-is:          Bench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base >= 4.12
                  , besout >= 0.2
                  , criterion >= 1.5.4.0 && <= 1.5.5.0
                  , GCD

