cabal-version:      >=1.10

name:               gcd
version:            0.9.0
synopsis:           Greatest Common Denominator
description:        Test versions of Euclid's greatest common denominator algorithm
homepage:           https://github.com/frankhjung/gcd#readme
license:            GPL-3
license-file:       LICENSE
author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2018-2021 Frank H Jung
category:           education
build-type:         Simple
extra-source-files: README.md
tested-with:        GHC == 8.8.4

source-repository head
  type:             git
  location:         git@github.com:frankhjung/haskell-gcd.git

executable          gcd
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    base >= 4.13 && < 4.14
                  , gcd
  other-modules:    Paths_gcd

library
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  Gcd
  build-depends:    base >= 4.13 && < 4.14

benchmark           benchmark
  hs-source-dirs:   bench
  main-is:          Bench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base >= 4.13 && < 4.14
                  , criterion >= 1.5 && < 1.6
                  , gcd

test-suite          test
  hs-source-dirs:   test
  main-is:          Test.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base >= 4.13 && < 4.14
                  , hspec >= 2.7 && < 2.8
                  , gcd
