cabal-version:      3.0
name:               gcd
version:            0.12.2
synopsis:           Greatest Common Denominator
description:
  Test versions of Euclid's greatest common denominator algorithm

homepage:           https://github.com/frankhjung/gcd#readme
author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2018-2023 Frank H Jung
license:            GPL-3.0-only
license-file:       LICENSE
category:           education
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: git@github.com:frankhjung/haskell-gcd.git

executable gcd
  hs-source-dirs:   app src
  main-is:          Main.hs
  default-language: Haskell2010
  autogen-modules:  Paths_gcd
  build-depends:
    , base  ^>=4.17
    , gcd

  other-modules:
    Gcd
    Paths_gcd

library
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  Gcd
  build-depends:    base

test-suite test
  hs-source-dirs:   test src
  main-is:          Test.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  other-modules:    Gcd
  build-depends:
    , base
    , gcd
    , hspec
    , QuickCheck

benchmark benchmark
  hs-source-dirs:   bench src
  main-is:          Bench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  other-modules:    Gcd
  build-depends:
    , base
    , criterion
    , gcd
